--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -1,8 +1,8 @@
 resource_types:
-# - name: pull-request
-#   type: docker-image
-#   source:
-#     repository: jtarchie/pr
+- name: pull-request
+  type: docker-image
+  source:
+    repository: jtarchie/pr
 - name: slack-notification
   type: docker-image
   source:
@@ -23,20 +23,20 @@ resources:
       branch: master
       ignore_paths:
         - concourse/**
-  # - name: calendar-assistant-pr
-  #   type: pull-request
-  #   source:
-  #     repo: flavorjones/calendar-assistant
-  #     access_token: {{github-repo-status-access-token}}
-  #     ignore_paths:
-  #       - concourse/**
+  - name: calendar-assistant-pr
+    type: pull-request
+    source:
+      repo: flavorjones/calendar-assistant
+      access_token: {{github-repo-status-access-token}}
+      ignore_paths:
+        - concourse/**
   - name: slack-notification
     type: slack-notification
     source:
       url: {{pivotal-slack-calendar-assistant-webhook-url}}
 
-jobs:
 % ruby_version = RUBIES[:mri].last
+jobs:
   - name: ruby-<%= ruby_version %>
     public: true
     plan:
@@ -59,9 +59,51 @@ jobs:
           params:
             silent: true
             text: |
-              :concourse-failed: The build failed! https://ci.nokogiri.org/builds/$BUILD_ID
-      - put: slack-notification
-        params:
-          silent: true
-          text: |
-            :concourse-succeeded: The build succeeded! https://ci.nokogiri.org/builds/$BUILD_ID
+              :concourse-failed: $ATC_EXTERNAL_URL/builds/$BUILD_ID (master) The build failed!
+        on_success:
+          put: slack-notification
+          params:
+            silent: true
+            text: |
+              :concourse-succeeded: $ATC_EXTERNAL_URL/builds/$BUILD_ID (master) The build succeeded!
+
+  - name: ruby-<%= ruby_version %>-pr
+    public: true
+    plan:
+      - get: ci
+      - get: calendar-assistant-pr
+        trigger: true
+        version: every
+      - put: calendar-assistant-pr
+        params: {path: calendar-assistant-pr, status: pending}
+      - task: rake-spec
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: {repository: ruby, tag: "<%= ruby_version %>"}
+          inputs:
+            - name: ci
+            - name: calendar-assistant-pr
+              path: calendar-assistant
+          run:
+            path: ci/concourse/tasks/rake-spec/run.sh
+        on_failure:
+          aggregate:
+            - put: slack-notification
+              params:
+                silent: true
+                text: |
+                  :concourse-failed: $ATC_EXTERNAL_URL/builds/$BUILD_ID The build failed! (https://github.com/flavorjones/calendar-assistant/pull/$TEXT_FILE_CONTENT)
+            - put: calendar-assistant-pr
+              params: {path: calendar-assistant-pr, status: failure}
+        on_success:
+          aggregate:
+            - put: slack-notification
+              params:
+                silent: true
+                text_file: calendar-assistant-pr/.git/id
+                text: |
+                  :concourse-succeeded: $ATC_EXTERNAL_URL/builds/$BUILD_ID The build succeeded! (https://github.com/flavorjones/calendar-assistant/pull/$TEXT_FILE_CONTENT)
+            - put: calendar-assistant-pr
+              params: {path: calendar-assistant-pr, status: success}
