--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -23,6 +23,7 @@ resources:
       branch: master
       ignore_paths:
         - concourse/**
+        - doc/**
   - name: calendar-assistant-pr
     type: pull-request
     source:
