fix slack notification for pullrequests

--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -96,7 +96,7 @@ jobs:
             - put: slack-notification
               params:
                 silent: true
-                text_file: calendar-assistant/.git/id
+                text_file: calendar-assistant-pr/.git/id
                 text: |
                   :concourse-failed: $ATC_EXTERNAL_URL/builds/$BUILD_ID PR $TEXT_FILE_CONTENT Fail: https://github.com/flavorjones/calendar-assistant/pull/$TEXT_FILE_CONTENT
             - put: calendar-assistant-pr
@@ -106,7 +106,7 @@ jobs:
             - put: slack-notification
               params:
                 silent: true
-                text_file: calendar-assistant/.git/id
+                text_file: calendar-assistant-pr/.git/id
                 text: |
                   :concourse-succeeded: $ATC_EXTERNAL_URL/builds/$BUILD_ID PR $TEXT_FILE_CONTENT Success: https://github.com/flavorjones/calendar-assistant/pull/$TEXT_FILE_CONTENT
             - put: calendar-assistant-pr
