--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -36,6 +36,22 @@ resources:
     source:
       url: {{pivotal-slack-calendar-assistant-webhook-url}}
 
+anchors:
+  notify_failure_to_slack: &notify_failure_to_slack
+    put: slack-notification
+    params:
+      silent: true
+      text_file: calendar-assistant/.git/commit_message
+      text: |
+        :concourse-failed: $ATC_EXTERNAL_URL/builds/$BUILD_ID (master) Fail: "$TEXT_FILE_CONTENT"
+  notify_success_to_slack: &notify_success_to_slack
+    put: slack-notification
+    params:
+      silent: true
+      text_file: calendar-assistant/.git/commit_message
+      text: |
+        :concourse-succeeded: $ATC_EXTERNAL_URL/builds/$BUILD_ID (master) Success: "$TEXT_FILE_CONTENT"
+
 % ruby_version = RUBIES[:mri].last
 jobs:
   - name: rake-spec
@@ -55,20 +71,38 @@ jobs:
             - name: calendar-assistant
           run:
             path: ci/concourse/tasks/rake-spec/run.sh
-        on_failure:
-          put: slack-notification
-          params:
-            silent: true
-            text_file: calendar-assistant/.git/commit_message
-            text: |
-              :concourse-failed: $ATC_EXTERNAL_URL/builds/$BUILD_ID (master) Fail: "$TEXT_FILE_CONTENT"
-        on_success:
-          put: slack-notification
-          params:
-            silent: true
-            text_file: calendar-assistant/.git/commit_message
-            text: |
-              :concourse-succeeded: $ATC_EXTERNAL_URL/builds/$BUILD_ID (master) Success: "$TEXT_FILE_CONTENT"
+        on_failure: *notify_failure_to_slack
+
+  - name: license-check
+    public: true
+    plan:
+      - get: ci
+      - get: calendar-assistant
+        trigger: true
+        passed: ["rake-spec"]
+      - task: license-finder
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: {repository: ruby, tag: "<%= ruby_version %>"}
+          inputs:
+            - name: ci
+            - name: calendar-assistant
+          run:
+            path: ci/concourse/tasks/license-finder/run.sh
+        on_failure: *notify_failure_to_slack
+
+  - name: build-success
+    public: true
+    disable_manual_trigger: true
+    plan:
+      - get: calendar-assistant
+        trigger: true
+        version: every
+        passed: ["license-check"]
+      - *notify_success_to_slack
+
 
   - name: rake-spec-pr
     public: true
