--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -86,48 +86,8 @@ jobs:
             - name: calendar-assistant
           run:
             path: ci/concourse/tasks/rake-spec/run.sh
-        on_failure: *notify_failure_to_slack
-
-  - name: license-check
-    public: true
-    plan:
-      - get: ci
-      - get: calendar-assistant
-        trigger: true
-        passed: ["rake-spec"]
-      - task: license-finder
-        config:
-          platform: linux
-          image_resource:
-            type: docker-image
-            source: {repository: ruby, tag: "<%= ruby_version %>"}
-          inputs:
-            - name: ci
-            - name: calendar-assistant
-          run:
-            path: ci/concourse/tasks/license-finder/run.sh
-        on_failure: *notify_failure_to_slack
-
-  - name: build-success
-    public: true
-    disable_manual_trigger: true
-    plan:
-      - get: calendar-assistant
-        trigger: true
-        version: every
-        passed: ["license-check"]
-      - *notify_success_to_slack
-
-
-  - name: pr-pending
-    public: true
-    plan:
-      - get: ci
-      - get: calendar-assistant-pr
-        trigger: true
-        version: every
-      - put: calendar-assistant-pr
-        params: {path: calendar-assistant-pr, status: pending}
+    on_failure: *notify_failure_to_slack
+    on_success: *notify_success_to_slack
 
   - name: rake-spec-pr
     public: true
@@ -136,7 +96,8 @@ jobs:
       - get: calendar-assistant-pr
         trigger: true
         version: every
-        passed: ["pr-pending"]
+      - put: calendar-assistant-pr
+        params: {path: calendar-assistant-pr, status: pending}
       - task: rake-spec
         config:
           platform: linux
@@ -154,41 +115,8 @@ jobs:
             - *notify_pr_failure_to_slack
             - put: calendar-assistant-pr
               params: {path: calendar-assistant-pr, status: failure}
-
-  - name: license-check-pr
-    public: true
-    plan:
-      - get: ci
-      - get: calendar-assistant-pr
-        trigger: true
-        version: every
-        passed: ["rake-spec-pr"]
-      - task: license-finder
-        config:
-          platform: linux
-          image_resource:
-            type: docker-image
-            source: {repository: ruby, tag: "<%= ruby_version %>"}
-          inputs:
-            - name: ci
-            - name: calendar-assistant-pr
-              path: calendar-assistant
-          run:
-            path: ci/concourse/tasks/license-finder/run.sh
-        on_failure:
+        on_success:
           aggregate:
-            - *notify_pr_failure_to_slack
+            - *notify_pr_success_to_slack
             - put: calendar-assistant-pr
-              params: {path: calendar-assistant-pr, status: failure}
-
-  - name: pr-success
-    public: true
-    disable_manual_trigger: true
-    plan:
-      - get: calendar-assistant-pr
-        trigger: true
-        version: every
-        passed: ["license-check-pr"]
-      - *notify_pr_success_to_slack
-      - put: calendar-assistant-pr
-        params: {path: calendar-assistant-pr, status: success}
+              params: {path: calendar-assistant-pr, status: success}
