add Code Climate test coverage reporting
to both master and PR jobs

Closes #30

--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -84,6 +84,8 @@ jobs:
           inputs:
             - name: ci
             - name: calendar-assistant
+          params:
+            CC_TEST_REPORTER_ID: {{code_climate_reporter_id}}
           run:
             path: ci/concourse/tasks/rake-spec/run.sh
     on_failure: *notify_failure_to_slack
@@ -108,6 +110,8 @@ jobs:
             - name: ci
             - name: calendar-assistant-pr
               path: calendar-assistant
+          params:
+            CC_TEST_REPORTER_ID: {{code_climate_reporter_id}}
           run:
             path: ci/concourse/tasks/rake-spec/run.sh
         on_failure:
