--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Gemfile.lock
+concourse/calendar-assistant.yml.generated
+concourse/private.yml
 coverage
-concourse/calendar-assistant.final.yml
 credentials.json
 node_modules
 package-lock.json
