--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -11,25 +11,25 @@
     :why: 
     :versions: []
     :when: 2018-10-29 15:43:52.039304411 Z
-- - :whitelist
+- - :permit
   - MIT
   - :who: 
     :why: 
     :versions: []
     :when: 2018-10-29 15:46:44.014908282 Z
-- - :whitelist
+- - :permit
   - Apache 2.0
   - :who: 
     :why: 
     :versions: []
     :when: 2018-10-29 15:46:53.786676923 Z
-- - :whitelist
+- - :permit
   - ruby
   - :who: 
     :why: 
     :versions: []
     :when: 2018-10-29 15:46:59.481095782 Z
-- - :whitelist
+- - :permit
   - ISC
   - :who: 
     :why: 
