--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -3,10 +3,10 @@ resource_types:
   type: docker-image
   source:
     repository: jtarchie/pr
-- name: slack-notification
+- name: webhook-notification
   type: docker-image
   source:
-    repository: cfcommunity/slack-notification-resource
+    repository: flavorjones/webhook-notification-resource
     tag: latest
 
 resources:
@@ -28,48 +28,28 @@ resources:
     type: pull-request
     source:
       repo: flavorjones/calendar-assistant
-      access_token: {{github-repo-status-access-token}}
+      access_token: ((github-repo-status-access-token))
       ignore_paths:
         - concourse/**
-  - name: slack-notification
-    type: slack-notification
+  - name: gitter
+    type: webhook-notification
     source:
-      url: {{pivotal-slack-calendar-assistant-webhook-url}}
+      adapter: GitterActivityFeedAdapter
+      url: ((calendar-assistant-gitter-channel-webhook-url))
 
 anchors:
-  notify_failure_to_slack: &notify_failure_to_slack
-    put: slack-notification
-    params:
-      silent: true
-      text_file: calendar-assistant/.git/commit_message
-      text: |
-        :concourse-failed: (master) $ATC_EXTERNAL_URL/builds/$BUILD_ID :nobueno:
-        $TEXT_FILE_CONTENT
-  notify_success_to_slack: &notify_success_to_slack
-    put: slack-notification
-    params:
-      silent: true
-      text_file: calendar-assistant/.git/commit_message
-      text: |
-        :concourse-succeeded: (master) $ATC_EXTERNAL_URL/builds/$BUILD_ID :success:
-        $TEXT_FILE_CONTENT
-  notify_pr_failure_to_slack: &notify_pr_failure_to_slack
-    put: slack-notification
-    params:
-      silent: true
-      text_file: calendar-assistant-pr/.git/id
-      text: |
-        :concourse-failed: (PR $TEXT_FILE_CONTENT) $ATC_EXTERNAL_URL/builds/$BUILD_ID :nobueno:
-        https://github.com/flavorjones/calendar-assistant/pull/$TEXT_FILE_CONTENT
-  notify_pr_success_to_slack: &notify_pr_success_to_slack
-    put: slack-notification
-    params:
-      silent: true
-      text_file: calendar-assistant-pr/.git/id
-      text: |
-        :concourse-succeeded: (PR $TEXT_FILE_CONTENT) $ATC_EXTERNAL_URL/builds/$BUILD_ID :success:
-        https://github.com/flavorjones/calendar-assistant/pull/$TEXT_FILE_CONTENT
-
+  notify_failure_to_gitter: &notify_failure_to_gitter
+    put: gitter
+    params: { status: "failed" }
+  notify_success_to_gitter: &notify_success_to_gitter
+    put: gitter
+    params: { status: "succeeded" }
+  notify_pr_failure_to_gitter: &notify_pr_failure_to_gitter
+    put: gitter
+    params: { status: "failed" }
+  notify_pr_success_to_gitter: &notify_pr_success_to_gitter
+    put: gitter
+    params: { status: "succeeded" }
 
 jobs:
   - name: rake-spec
@@ -92,8 +72,8 @@ jobs:
             GIT_BRANCH: master
           run:
             path: ci/concourse/tasks/rake-spec/run.sh
-    on_failure: *notify_failure_to_slack
-    on_success: *notify_success_to_slack
+    on_failure: *notify_failure_to_gitter
+    on_success: *notify_success_to_gitter
 
   - name: rake-spec-pr
     public: true
@@ -119,12 +99,12 @@ jobs:
           run:
             path: ci/concourse/tasks/rake-spec/run.sh
         on_failure:
-          aggregate:
-            - *notify_pr_failure_to_slack
+          in_parallel:
+            - *notify_pr_failure_to_gitter
             - put: calendar-assistant-pr
               params: {path: calendar-assistant-pr, status: failure}
         on_success:
-          aggregate:
-            - *notify_pr_success_to_slack
+          in_parallel:
+            - *notify_pr_success_to_gitter
             - put: calendar-assistant-pr
               params: {path: calendar-assistant-pr, status: success}
