--- a/concourse/calendar-assistant.yml
+++ b/concourse/calendar-assistant.yml
@@ -1,10 +1,10 @@
 resource_types:
 - name: pull-request
-  type: docker-image
+  type: registry-image
   source:
     repository: teliaoss/github-pr-resource
 - name: webhook-notification
-  type: docker-image
+  type: registry-image
   source:
     repository: flavorjones/webhook-notification-resource
     tag: latest
@@ -72,7 +72,7 @@ jobs:
         config:
           platform: linux
           image_resource:
-            type: docker-image
+            type: registry-image
             source: {repository: "flavorjones/calendar-assistant-test"}
           inputs:
             - name: ci
@@ -98,7 +98,7 @@ jobs:
         config:
           platform: linux
           image_resource:
-            type: docker-image
+            type: registry-image
             source: {repository: "flavorjones/calendar-assistant-test"}
           inputs:
             - name: ci
