dependencies: approve REXML's license

--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -35,3 +35,9 @@
     :why: 
     :versions: []
     :when: 2018-10-29 15:47:23.338539457 Z
+- - :permit
+  - Simplified BSD
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2020-11-28 15:36:52.219025866 Z
