ci: set up Github Actions pipeline
- generate an OCI image for running the test suite
- run the test suite using that

--- a/concourse/images/Dockerfile
+++ b/concourse/images/Dockerfile
@@ -5,8 +5,7 @@ RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
 RUN apt-get install -y nodejs
 RUN npm install --global ansi-to-html markdown-toc
 
-COPY Gemfile                           calendar-assistant/
-COPY Gemfile.lock                      calendar-assistant/
+COPY Gemfile*                          calendar-assistant/
 RUN gem install bundler
 
 COPY calendar-assistant.gemspec        calendar-assistant/
