--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -20,4 +20,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run test suite
-      run: bundle exec rake
+      run: bundle exec ./ci/run.sh
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMATE_REPORTER_ID }}
