ci: fix cron entries to be at 7am and 8am fridays
also add a manual dispatch option to the test suite

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -1,15 +1,14 @@
 name: Test suite
 
 on:
+  workflow_dispatch: {}
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
     types: [opened, synchronize]
-    branches:
-      - master
+    branches: [master]
   schedule:
-    - cron: "8 0 * * 5" # an hour after the test image is generated
+    - cron: "0 8 * * 5" # At 08:00 on Friday, an hour after the test image is generated. https://crontab.guru/#0_8_*_*_5
 
 jobs:
   test:
