--- a/.github/workflows/build-test-image.yml
+++ b/.github/workflows/build-test-image.yml
@@ -4,7 +4,7 @@ name: Build Test Image
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "7 0 * * 5" # an hour before the test suite
+    - cron: "0 7 * * 5" # At 07:00 on Friday, an hour before the test suite. https://crontab.guru/#0_7_*_*_5
 
 jobs:
   build-image:
