ci: skip license_finder until it supports a modern Psych

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -37,4 +37,5 @@ jobs:
           bundler-cache: true
         env:
           BUNDLE_WITHOUT: optional
-      - run: bundle exec rake readme:check license_finder
+      - run: bundle exec rake readme:check
+#      - run: bundle exec rake license_finder # Psych::DisallowedClass: Tried to load unspecified class: Time
